--- a/Aqram's_Exercise/templates/HeartDisease_copy.html
+++ b/Aqram's_Exercise/templates/HeartDisease_copy.html
@@ -26,6 +26,10 @@
 			<!--Form-->
 			<form method ="POST" >
 				<fieldset>
+
+				{#  This is hidden_tag. #}
+				 {{ form.hidden_tag() }}
+
 				<legend>Heart Disease Test Form</legend><br>
 				  <div class="card card-body" >
 					  <div class="form-group  row">
@@ -139,8 +143,12 @@
 					  </div>
 					  
 					  <!--Prediction Result-->
-					  <div id ="result">
-							<strong style="color:red">{{result}}</strong>
+
+					  <!-- <h1>
+					  	{{gender}}
+					  </h1> -->
+					  <div id ="results">
+							<strong style="color:red">{{results}}</strong>
 					 </div>
 				     </div>
 			 </fieldset>
