--- a/Heart disease/templates/predictions.html
+++ b/Heart disease/templates/predictions.html
@@ -42,7 +42,7 @@ body, html {height: 100%}
 	<li>Thalassemia: {{tha}}</li>
 </ul>
 <h2>Results: {{results}}</h2>
-<h3>Model Accuracy: 90% </h3>
+<h3>Result Accuracy: 90% </h3>
     <hr class="w3-border-grey" style="margin:auto;width:40%">
     <p class="w3-large w3-center"></p>
   </div>
