--- a/Aqram's_Exercise/templates/prediction.html
+++ b/Aqram's_Exercise/templates/prediction.html
@@ -1,19 +1,30 @@
 <!DOCTYPE html>
 <html>
 <title>Prediction</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+<style>
+body,h1 {font-family: "Raleway", sans-serif}
+body, html {height: 100%}
+.bgimg {
+  background-image: url({{ url_for('static',filename='heart.jpg') }});
+  min-height: 100%;
+  background-position: center;
+  background-size: cover;
+}
+</style>style>
+</body>
+</html>
 
 
-<head>
-
-
-
-</head>
-
-
-<body>
-
+<div class="bgimg w3-display-container w3-animate-opacity w3-text-white">
+  <div class="w3-display-topleft w3-padding-large w3-xlarge">
  Plastik Hitam   
   </div>
+  <div class="w3-display-middle">
+    <h2 class="w3-jumbo w3-animate-top"></h2>
     <h2>Patient Details:</h2>
     <ul>
 	<li>Age: {{session['age']}}</li>
@@ -30,12 +41,14 @@
 	<li>Number of Unclogged Major Vessels: {{session['ca']}}</li>
 	<li>Thalassemia: {{tha}}</li>
 </ul>
-
-
 <h2>Results: {{results}}</h2>
-<h3>Model Accuracy: 90% </h3>
+<h3>Result Accuracy: 90% </h3>
+    <hr class="w3-border-grey" style="margin:auto;width:40%">
+    <p class="w3-large w3-center"></p>
+  </div>
+  <div class="w3-display-bottomleft w3-padding-large">
+     <a href="https://www.w3schools.com/w3css/default.asp" target="_blank"></a>
+  </div>
 </div>
-</body>
 
-</html>
 
