--- a/Aqram's_Exercise/templates/HeartDisease_copy.html
+++ b/Aqram's_Exercise/templates/HeartDisease_copy.html
@@ -7,31 +7,84 @@
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 		<title>Heart Disease Test</title>
+
+
+		<style>
+		
+			/* Add styles to the form container */
+			.bgcolor1 {
+			  	background-image: url({{ url_for('static',filename='heart3.jpg') }});
+			  	  background-repeat: no-repeat;
+                  background-size: 100%;    
+  			}
+			
+			.bgcolor2 {
+			  background-color: white;	  
+			}
+			
+
+			.bgcolor3 {
+			  background-color: red;
+			}
+			
+	     					     
+			 .button {
+				background-color: #FF0000;
+				border: none;
+				box-shadow: 1px 1px 3px #4F0000;
+				color: white;
+				padding: 5px 20px;
+				text-align: center;
+				text-decoration: none;
+				display: inline-block;
+				margin: 4px 2px;
+				cursor: pointer;
+				border-radius: 16px;
+				margin: 0;
+                position: absolute;
+                top: 95%;
+                left: 50%;
+                -ms-transform: translate(-50%, -50%);
+                transform: translate(-50%, -50%);
+  					      }
+
+/*			<input class="btn btn-primary" type="submit" value="Analyze">
+*/
+
+
+		</style>
+
 	</head>
-	
-	</style>
-	<body>
+
+
+	<body class="bgcolor1">
 	<!-- Java Script -->	
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
 		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 
-		
+		 
 		<!-- Navbar-->
+
 		<nav class="navbar navbar-dark bg-dark">
 			<span class="navbar-brand mb-0 h1">Heart Disease Prediction</span>
 		</nav>
+
+		
 		<div class="container">
 			<br>
 			<!--Form-->
 			<form method ="POST" >
-				<fieldset>
+				<fieldset class="bgcolor3">
 
 				{#  This is hidden_tag. #}
 				 {{ form.hidden_tag() }}
 
-				<legend>Heart Disease Test Form</legend><br>
-				  <div class="card card-body" >
+				<p style="color:white; font-size:35px; background-color: red">
+					Heart Disease Test Form
+				</p> 
+				<br>
+				  <div class="bgcolor2" >
 					  <div class="form-group  row">
 						<div class="col-sm-3">
 							<label for="age">Age</label>
@@ -127,7 +180,10 @@
 							</select>
 						  </div>
 						  <div class="col-sm-3">
-							<label for="thal">Thalassemia</label>
+
+							<label for="thal">Thalassemia &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+							</label>
+
 							<select class="form-control" id="thal" name = "thal" required>
 							  <option disabled selected value> -- Select an Option -- </option>
 							  <option value = "0">Null</option>
@@ -139,16 +195,15 @@
 					  </div>
 					  <br>
 					  <div class="form-group">
-						<input class="btn btn-primary" type="submit" value="Result">
-					  </div>
-					  
-					  <!--Prediction Result-->
+                        
 
-					  <!-- <h1>
-					  	{{gender}}
-					  </h1> -->
-					  <div id ="results">
-							<strong style="color:red">{{results}}</strong>
+						    <body>
+						    <button class="button">Analyze</button>
+						  </body>
+
+                       
+					  </div>
+								
 					 </div>
 				     </div>
 			 </fieldset>
