Try to reduce Backfrounbd opacity

--- a/Aqram's_Exercise/templates/HeartDisease_copy.html
+++ b/Aqram's_Exercise/templates/HeartDisease_copy.html
@@ -77,8 +77,7 @@
 			<form method ="POST" >
 				<fieldset class="bgcolor3">
 
-				{#  This is hidden_tag. #}
-				 {{ form.hidden_tag() }}
+                <input id="csrf_token" name="csrf_token" type="hidden" value="IjllZDczMGE4ZDc2OGJlOGVkOGVhNDEwZWYzZTY1ZjhlNTc0ZjJiNGQi.YKykIA.C8briHxUnLmasy9Pem33N2wt7ew">
 
 				<p style="color:white; font-size:35px; background-color: red">
 					Heart Disease Test Form
