--- a/Aqram's_Exercise/templates/prediction.html
+++ b/Aqram's_Exercise/templates/prediction.html
@@ -14,7 +14,7 @@ body, html {height: 100%}
   background-position: center;
   background-size: cover;
 }
-</style>style>
+</style>
 </body>
 </html>
 
